// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > (1) should render 'card without caption' if attachment type is 'audio' and 'og_scrape_url neither title_link is a…' 1`] = `
<div>
  <div
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > (2) should render 'card without caption' if attachment type is 'video' and 'og_scrape_url neither title_link is a…' 1`] = `
<div>
  <div
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > (3) should render 'card without caption' if attachment type is 'image' and 'og_scrape_url neither title_link is a…' 1`] = `
<div>
  <div
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > (4) should render 'unable-to-display card' if attachment type is 'audio' and 'neither image and asset urls nor titl…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (5) should render 'unable-to-display card' if attachment type is 'video' and 'neither image and asset urls nor titl…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (6) should render 'unable-to-display card' if attachment type is 'image' and 'neither image and asset urls nor titl…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (7) should render 'audio with caption using og_scrape_ur…' if attachment type is 'audio' and 'title_link is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (8) should render 'video with caption using og_scrape_ur…' if attachment type is 'video' and 'title_link is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (9) should render 'image with caption using og_scrape_ur…' if attachment type is 'image' and 'title_link is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (10) should render 'audio without title' if attachment type is 'audio' and 'title is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (11) should render 'video without title' if attachment type is 'video' and 'title is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (12) should render 'image without title' if attachment type is 'image' and 'title is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (13) should render 'audio without title and with caption …' if attachment type is 'audio' and 'title_link neither title is available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (14) should render 'video without title and with caption …' if attachment type is 'video' and 'title_link neither title is available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (15) should render 'image without title and with caption …' if attachment type is 'image' and 'title_link neither title is available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_og_scrape_url"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_thumb_url"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_thumb_url"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_og_scrape_url
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (16) should render 'audio widget with title & text in Car…' if attachment type is 'audio' and 'og image URLs are not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (17) should render 'video widget in header and title & te…' if attachment type is 'video' and 'og image URLs are not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (18) should render 'card with title and text only and wit…' if attachment type is 'image' and 'og image URLs are not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (19) should render 'image loaded from thumb_url not audio…' if attachment type is 'audio' and 'thumb_url is available, but not asset…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_thumb_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (20) should render 'image loaded from thumb_url not video…' if attachment type is 'video' and 'thumb_url is available, but not asset…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_thumb_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (21) should render 'image loaded from thumb_url' if attachment type is 'image' and 'thumb_url is available, but not image…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_thumb_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (22) should render 'image loaded from image_url not audio…' if attachment type is 'audio' and 'image_url is available, but not asset…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (23) should render 'image loaded from image_url not video…' if attachment type is 'video' and 'image_url is available, but not asset…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (24) should render 'image loaded from image_url' if attachment type is 'image' and 'image_url is available, but not thumb…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--image"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (25) should render 'audio widget with image loaded from t…' if attachment type is 'audio' and 'all props are available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (26) should render 'video widget in header and title & te…' if attachment type is 'video' and 'all props are available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--header str-chat__message-attachment-card-react--header"
      data-testid="card-header"
    >
      <img
        alt="dummyAttachment_title"
        class="str-chat__base-image"
        data-testid="image-test"
        src="dummyAttachment_image_url"
        title="dummyAttachment_title"
      />
    </div>
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (27) should render 'content part with title and text only…' if attachment type is 'audio' and 'asset and neither og image URL is ava…' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--audio"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > (28) should render 'content part with title and text only…' if attachment type is 'video' and 'scraped media URL is not available' 1`] = `
<div>
  <a
    class="str-chat__message-attachment-card str-chat__message-attachment-card--video"
    href="dummyAttachment_title_link"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--title"
      >
        dummyAttachment_title
      </div>
      <div
        class="str-chat__message-attachment-card--text"
      >
        dummyAttachment_text
      </div>
      <div
        class="str-chat__message-attachment-card--source-link"
        data-testid="card-source-link"
      >
        <svg
          class="str-chat__icon str-chat__icon--link"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.49989 12.4999L12.4999 7.49989M8.74989 5.94598L11.0983 3.60223C11.8035 2.90843 12.7543 2.52139 13.7436 2.52542C14.7328 2.52945 15.6804 2.92422 16.3799 3.62374C17.0795 4.32326 17.4742 5.27086 17.4783 6.26012C17.4823 7.24938 17.0953 8.20016 16.4015 8.90536L14.053 11.2499M5.94598 8.74989L3.60223 11.0983C2.90843 11.8035 2.52139 12.7543 2.52542 13.7436C2.52945 14.7328 2.92422 15.6804 3.62374 16.3799C4.32326 17.0795 5.27086 17.4742 6.26012 17.4783C7.24938 17.4823 8.20016 17.0953 8.90536 16.4015L11.2499 14.053"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        <div
          class="str-chat__message-attachment-card--url"
        >
          dummyAttachment_title_link
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`Card > should render giphy image if type is giphy 1`] = `
<div>
  <div
    class="str-chat__message-attachment-card"
  >
    <div
      class="str-chat__message-attachment-card--content"
    >
      <div
        class="str-chat__message-attachment-card--text"
      >
        this content could not be displayed
      </div>
    </div>
  </div>
</div>
`;
